# LucyCode

./: .gitignore  README.md  pyproject.toml  setup.py
frontend/: app.tsx  package.json
lucy/: __init__.py  main.py  native_bindings.py
lucy/api/: __init__.py  client.py  errors.py  models.py  ndjson_emitter.py  providers.py  weights_provider.py
lucy/chrome/: native_host.py  setup.py
lucy/commands/: __init__.py  agent_commands.py  auth_commands.py  billing_commands.py  context_commands.py  debug_commands.py  git_commands.py  mcp_commands.py  memory_commands.py  misc_commands.py  permission_commands.py  plan_commands.py  plugin_commands.py  review_commands.py  session_commands.py  task_commands.py  ui_commands.py
lucy/core/: __init__.py  agentic.py  background.py  commands.py  config.py  context.py  coordinator.py  hooks.py  kairos.py  memory.py  message.py  orchestrator.py  plugins.py  query.py  state.py  tool.py
lucy/permissions/: __init__.py  bash_classifier.py  dangerous_patterns.py  explainer.py  filesystem.py  loader.py  rules.py  types.py
lucy/plugins/: __init__.py  loader.py  manifest.py
lucy/services/: __init__.py  analytics.py  autodream.py  bridge.py  compact.py  computer_use.py  cron_service.py  deep_link.py  ide.py  kairos.py  lsp_server.py  mcp.py  mobile_qr.py  plugin_service.py  prompt_suggestion.py  remote_client.py  remote_server.py  session_memory.py  swarm_ui.py  tips.py  voice.py
lucy/shell/: __init__.py  commands.py  completion.py  output_limits.py  parser.py  provider.py  vim.py  (+2 more)
native/: Makefile  diff.c  diff.h  fileio.c  fileio.h  search.c  search.h  shell.c  shell.h
tests/: __init__.py  test_lucy.py
vscode_extension/: extension.js  package.json
(+60 files in other folders)
